################################################################################
# CMake
################################################################################
cmake_minimum_required(VERSION 2.8.3)
project(auto_tb3b_msgs)

################################################################################
# Packages
################################################################################
find_package(catkin REQUIRED COMPONENTS
  message_generation
  sensor_msgs
  std_msgs
  std_srvs
)

################################################################################
# Declare ROS messages, services and actions
################################################################################
add_message_files(
  FILES
  temp.msg
)

#add_service_files(
#  FILES
#   Service1.srv
#)

#add_action_files(
#  FILES
# Action1.action
#)

generate_messages(
  DEPENDENCIES
  sensor_msgs
  std_msgs
)

################################################################################
# Declare ROS dynamic reconfigure parameters
################################################################################

################################################################################
# Catkin specific configuration
################################################################################
catkin_package(
  CATKIN_DEPENDS sensor_msgs std_msgs std_srvs message_runtime
)

################################################################################
# Build
################################################################################

################################################################################
# Install
################################################################################

################################################################################
# Test
################################################################################
