<?xml version="1.0"?>
<package>
  <name>auto_tb3b_msgs</name>
  <version>0.0.1</version>
  <description>
    Message and service types: custom messages and services for AUTO::TurtleBot3 Burger packages
  </description>

  <license>Apache License 2.0</license>
  <author email="acrobo@naver.com">Dohyun Kim</author>
  <author email="whehddns3@naver.com">Dongwoon Jo</author>
  <author email="hyunokhyunok@naver.com">Hyunok Lee</author>
  <author email="robotmakeredu@gmail.com">Jaeho Yang</author>
  <author email="gunstar089@gmail.com">Jincheol Baek</author>
  <author email="mrchoi929@gmail.com">Jongho Choi</author>
  <author email="gjwns1222@gmail.com">Jun Heo</author>
  <author email="skfk3606@naver.com">Kihoon Kim</author>
  <author email="rwjung@robotis.com">Leon Ryuwoon Jung</author>
  <author email="myeongjun.ko@gmail.com">Myeongjun Ko</author>

  <maintainer email="rwjung@robotis.com">Leon Ryuwoon Jung</maintainer>

  <url type="bugtracker">https://github.com/ROBOTIS-GIT/auto_turtlebot3_burger/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/auto_turtlebot3_burger</url>
  <url type="website">http://wiki.ros.org/auto_tb3b_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
</package>
